--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ AWS_SECRET_ACCESS_KEY="#### Your Aws Secret Key ####"
 AWS_REGION="#### Your Aws Region ####"
 AWS_S3_BUCKET_NAME="#### Your Bucket Name ####"
 
+# Google TTS API Key
+GOOGLE_TTS_API_KEY="#### Your Google TTS API Key ####"
+
 # Application Properties
 	## Box settings
 		BORDER_THICKNESS=3
