--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "aws-sdk": "^2.1386.0",
     "canvas": "^2.11.2",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jimp": "^0.22.8",
     "multer": "^1.4.5-lts.1",
+    "request": "^2.88.2",
     "sharp": "^0.32.1"
   }
 }
